コードを整理
コードを整理して、コメントを付けました。
ハンガリアン記法を統一。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "builddivide2D.sln"
+    "dotnet.defaultSolution": "Buildivaide2D.sln"
 }
